# usd-render

./: Cargo.toml  bindings.c  bundle-windows-from-target.nix  flake.nix  package.nix  renderdoc.cap  vulkan-sdk.nix  windows.nix
reference/: render_c.c  render_python.py
src/: bindings.rs  ipc.rs  layers.rs  logging.rs  main.rs  networking.rs  ui.rs  util.rs
