[package]
name = "usd-render"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Error handling
anyhow = "1.0.79"
# Usd
bbl-usd = { path = "../bbl-usd-rs" }
# argument parsing
clap = { version = "4.4.18", features = ["derive"] }
# camera
dolly = "0.4.2"
# Ui
egui = "0.25.0"
egui_glow = "0.25.0"
egui_window_glfw_passthrough = "0.7.0"
# linear algebra
glam = "0.24.0"
# OpenGL
glfw = { package = "glfw-passthrough", version = "0.51.1" }
glow = "0.13.1"
# Networking
iroh-net = "0.12.0"
postcard = "1.0.8"
quinn = "0.10.2"
# Logging
log = "0.4.20"
# Async
tokio = "1.35.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
rfd = "0.13.0"
arrayvec = "0.7.4"
