[package]
name = "usd-render"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Error handling
anyhow = "1.0.79"
# Usd
bbl-usd = { git = "https://github.com/expenses/bbl-usd-rs", branch = "imaging-plus-resolver" }
# argument parsing
clap = { version = "4.4.18", features = ["derive"] }
# camera
dolly = "0.4.2"
# Ui
egui = "0.23.0"
# linear algebra
glam = "0.24.0"
# Networking
iroh-net = "0.12.0"
postcard = "1.0.8"
quinn = "0.10.2"
# Logging
log = "0.4.20"
# Async
tokio = "1.35.1"
#rfd = "0.13.0"
arrayvec = "0.7.4"
scc = "2.0.14"
# Windowing
winit = { version = "0.28", features = ["x11"], default-features = false }
raw-window-handle = "0.5"
# Vulkan
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
egui-winit-ash-integration = "0.6.0"
gpu-allocator = "0.23.0"
